oui 2 eme commit

--- a/labo_1_01_G_Merlin.ipynb
+++ b/labo_1_01_G_Merlin.ipynb
@@ -34,7 +34,7 @@
         "outputId": "921bb5e1-55a4-405b-ab4e-4a1d221d44e9"
       },
       "id": "mHtVas0Civxn",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
         "id": "caMFa3Z6jtXy"
       },
       "id": "caMFa3Z6jtXy",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "2d680db0-67dd-43b9-b1c1-6e9df46f342e",
       "metadata": {
         "id": "2d680db0-67dd-43b9-b1c1-6e9df46f342e"
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "939c0515-9e15-416a-a0b4-032b21d44ee4",
       "metadata": {
         "id": "939c0515-9e15-416a-a0b4-032b21d44ee4",
@@ -598,7 +598,7 @@
         "outputId": "25485fa5-881e-4b39-c62b-477be23fa3a3"
       },
       "id": "RvLK3vXwbO5f",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +640,7 @@
         "outputId": "d4a22087-0061-499d-8c5f-7fbd7c6ba742"
       },
       "id": "VYZ6RRiXEMHI",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,12 +695,12 @@
         "id": "UDBrriOl3F-R"
       },
       "id": "UDBrriOl3F-R",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "321e1363-a36b-4b13-8c12-673ddbf470d7",
       "metadata": {
         "id": "321e1363-a36b-4b13-8c12-673ddbf470d7"
@@ -729,7 +729,7 @@
         "outputId": "f6a684bb-5e6e-4321-aab9-be5a17a7afad"
       },
       "id": "i_7VMBHT7oOO",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1310,7 +1310,7 @@
         "outputId": "7078a3aa-52a6-4095-9ac4-e90aebf28b0e"
       },
       "id": "jethj8D1_u3A",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1731,7 +1731,7 @@
         "outputId": "25d3bf21-6822-42bc-b030-a12597a63a96"
       },
       "id": "uDjEfFJfN7LG",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1830,7 +1830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "1ef38c96-ce04-4a31-9cc9-ab7be8befd1c",
       "metadata": {
         "id": "1ef38c96-ce04-4a31-9cc9-ab7be8befd1c"
@@ -1865,7 +1865,7 @@
         "outputId": "8234b23e-f34a-4c7e-ba4a-972643cf529b"
       },
       "id": "yeE0tf2PRBuf",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2003,7 +2003,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "a1c465bc-2275-44d5-a0a7-625a18d8b666",
       "metadata": {
         "id": "a1c465bc-2275-44d5-a0a7-625a18d8b666"
@@ -2052,7 +2052,7 @@
         "outputId": "cb364450-f910-46cb-8942-e6ae47d09f06"
       },
       "id": "9t0_rVp2T_FG",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2093,12 +2093,12 @@
         "id": "pKlCB0QE8p_I"
       },
       "id": "pKlCB0QE8p_I",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "84b862c2-0db4-4829-93e1-2f3e2d2c39f8",
       "metadata": {
         "id": "84b862c2-0db4-4829-93e1-2f3e2d2c39f8"
@@ -2134,7 +2134,7 @@
         "outputId": "e8457ec0-bcc5-4ae6-f878-a94ddf22347c"
       },
       "id": "paFMUoDwA8ox",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2267,7 +2267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "e596519a-a287-4d52-8e04-4f703a5ddc5a",
       "metadata": {
         "id": "e596519a-a287-4d52-8e04-4f703a5ddc5a"
@@ -2306,7 +2306,7 @@
         "outputId": "1e2a7854-8f2b-4ba9-c1f9-2eb59ff9a117"
       },
       "id": "CSiPEzXXG258",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2341,6 +2341,8 @@
         "\n",
         "\n",
         "JeuDonneeesDepersonnaliser.dtypes # permet de connaitre le type de chaque colonne\n",
+        "\n",
+        "merlin\n",
         "\n"
       ],
       "metadata": {
@@ -2352,7 +2354,7 @@
         "outputId": "1eb772d6-ad62-4cf6-a06d-7916f0547ae2"
       },
       "id": "NzNwR6B1LOPf",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
