--- a/labo_1_01_G_Merlin.ipynb
+++ b/labo_1_01_G_Merlin.ipynb
@@ -2341,8 +2341,7 @@
         "\n",
         "\n",
         "JeuDonneeesDepersonnaliser.dtypes # permet de connaitre le type de chaque colonne\n",
-        "\n",
-        "merlin\n",
+        "saffafadsfa\n",
         "\n"
       ],
       "metadata": {
