--- a/labo_1_01_G_Merlin.ipynb
+++ b/labo_1_01_G_Merlin.ipynb
@@ -2341,43 +2341,35 @@
         "\n",
         "\n",
         "JeuDonneeesDepersonnaliser.dtypes # permet de connaitre le type de chaque colonne\n",
-        "saffafadsfa\n",
-        "\n"
+        "jeuDonneeesDepersonnaliser['Country']\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 649
+          "height": 458
         },
         "id": "NzNwR6B1LOPf",
-        "outputId": "1eb772d6-ad62-4cf6-a06d-7916f0547ae2"
+        "outputId": "f9a12758-b5ba-4aef-eb29-7fa6f725813a"
       },
       "id": "NzNwR6B1LOPf",
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "DOB               object\n",
-              "SSN               object\n",
-              "Zip                int64\n",
-              "Age                int64\n",
-              "Workclass         object\n",
-              "fnlwgt             int64\n",
-              "Education         object\n",
-              "Education-Num      int64\n",
-              "Marital Status    object\n",
-              "Occupation        object\n",
-              "Relationship      object\n",
-              "Race              object\n",
-              "Sex               object\n",
-              "Capital Gain       int64\n",
-              "Capital Loss       int64\n",
-              "Hours per week     int64\n",
-              "Country           object\n",
-              "Target            object\n",
-              "dtype: object"
+              "0        United-States\n",
+              "1        United-States\n",
+              "2        United-States\n",
+              "3        United-States\n",
+              "4                 Cuba\n",
+              "             ...      \n",
+              "32556    United-States\n",
+              "32557    United-States\n",
+              "32558    United-States\n",
+              "32559    United-States\n",
+              "32560    United-States\n",
+              "Name: Country, Length: 32561, dtype: object"
             ],
             "text/html": [
               "<div>\n",
@@ -2398,89 +2390,62 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>0</th>\n",
+              "      <th>Country</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>DOB</th>\n",
-              "      <td>object</td>\n",
+              "      <th>0</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>SSN</th>\n",
-              "      <td>object</td>\n",
+              "      <th>1</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Zip</th>\n",
-              "      <td>int64</td>\n",
+              "      <th>2</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Age</th>\n",
-              "      <td>int64</td>\n",
+              "      <th>3</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Workclass</th>\n",
-              "      <td>object</td>\n",
+              "      <th>4</th>\n",
+              "      <td>Cuba</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>fnlwgt</th>\n",
-              "      <td>int64</td>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Education</th>\n",
-              "      <td>object</td>\n",
+              "      <th>32556</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Education-Num</th>\n",
-              "      <td>int64</td>\n",
+              "      <th>32557</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Marital Status</th>\n",
-              "      <td>object</td>\n",
+              "      <th>32558</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Occupation</th>\n",
-              "      <td>object</td>\n",
+              "      <th>32559</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Relationship</th>\n",
-              "      <td>object</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Race</th>\n",
-              "      <td>object</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sex</th>\n",
-              "      <td>object</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Capital Gain</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Capital Loss</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Hours per week</th>\n",
-              "      <td>int64</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Country</th>\n",
-              "      <td>object</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Target</th>\n",
-              "      <td>object</td>\n",
+              "      <th>32560</th>\n",
+              "      <td>United-States</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>32561 rows × 1 columns</p>\n",
               "</div><br><label><b>dtype:</b> object</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 23
         }
       ]
     },
