--- a/labo_1_01_G_Merlin.ipynb
+++ b/labo_1_01_G_Merlin.ipynb
@@ -2341,7 +2341,8 @@
         "\n",
         "\n",
         "JeuDonneeesDepersonnaliser.dtypes # permet de connaitre le type de chaque colonne\n",
-        "jeuDonneeesDepersonnaliser['Country']\n"
+        "jeuDonneeesDepersonnaliser['Country']\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -2349,10 +2350,10 @@
           "height": 458
         },
         "id": "NzNwR6B1LOPf",
-        "outputId": "f9a12758-b5ba-4aef-eb29-7fa6f725813a"
+        "outputId": "7cc58778-4c69-4eba-f4e9-13bb7ca7f880"
       },
       "id": "NzNwR6B1LOPf",
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2445,7 +2446,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 24
         }
       ]
     },
