--- a/labo_1_01_G_Merlin.ipynb
+++ b/labo_1_01_G_Merlin.ipynb
@@ -2342,6 +2342,7 @@
         "\n",
         "JeuDonneeesDepersonnaliser.dtypes # permet de connaitre le type de chaque colonne\n",
         "jeuDonneeesDepersonnaliser['Country']\n",
+        "jeuDonneeesDepersonnaliser['Race']\n",
         "\n"
       ],
       "metadata": {
@@ -2350,27 +2351,27 @@
           "height": 458
         },
         "id": "NzNwR6B1LOPf",
-        "outputId": "7cc58778-4c69-4eba-f4e9-13bb7ca7f880"
+        "outputId": "227a390a-3e74-4e19-80cf-5a22fcbbe145"
       },
       "id": "NzNwR6B1LOPf",
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0        United-States\n",
-              "1        United-States\n",
-              "2        United-States\n",
-              "3        United-States\n",
-              "4                 Cuba\n",
-              "             ...      \n",
-              "32556    United-States\n",
-              "32557    United-States\n",
-              "32558    United-States\n",
-              "32559    United-States\n",
-              "32560    United-States\n",
-              "Name: Country, Length: 32561, dtype: object"
+              "0        White\n",
+              "1        White\n",
+              "2        White\n",
+              "3        Black\n",
+              "4        Black\n",
+              "         ...  \n",
+              "32556    White\n",
+              "32557    White\n",
+              "32558    White\n",
+              "32559    White\n",
+              "32560    White\n",
+              "Name: Race, Length: 32561, dtype: object"
             ],
             "text/html": [
               "<div>\n",
@@ -2391,29 +2392,29 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Country</th>\n",
+              "      <th>Race</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>Black</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>Cuba</td>\n",
+              "      <td>Black</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -2421,23 +2422,23 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>32556</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>32557</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>32558</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>32559</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>32560</th>\n",
-              "      <td>United-States</td>\n",
+              "      <td>White</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -2446,7 +2447,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 25
         }
       ]
     },
