--- a/labo_1_01_g.ipynb
+++ b/labo_1_01_g.ipynb
@@ -58,7 +58,7 @@
         "id": "rcdEHxGri5IP"
       },
       "id": "rcdEHxGri5IP",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "2d680db0-67dd-43b9-b1c1-6e9df46f342e",
       "metadata": {
         "id": "2d680db0-67dd-43b9-b1c1-6e9df46f342e"
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "939c0515-9e15-416a-a0b4-032b21d44ee4",
       "metadata": {
         "id": "939c0515-9e15-416a-a0b4-032b21d44ee4",
@@ -543,7 +543,7 @@
         "outputId": "a9349ce6-ef3c-4ff9-837a-5f83b5a4a990"
       },
       "id": "UHUc4MkatT_v",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "321e1363-a36b-4b13-8c12-673ddbf470d7",
       "metadata": {
         "id": "321e1363-a36b-4b13-8c12-673ddbf470d7"
@@ -598,7 +598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "a3e53392-8705-408b-9f06-604804e3b46d",
       "metadata": {
         "id": "a3e53392-8705-408b-9f06-604804e3b46d"
@@ -622,7 +622,7 @@
         "outputId": "3776df8d-21c0-4aec-cd8e-b2634ffdbfb6"
       },
       "id": "_HL5lk5hA39e",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1259,7 +1259,7 @@
         "outputId": "bf89a986-d610-4877-be01-8a35e174f90b"
       },
       "id": "5XK8dUbLBEuB",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1669,7 +1669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "1ef38c96-ce04-4a31-9cc9-ab7be8befd1c",
       "metadata": {
         "id": "1ef38c96-ce04-4a31-9cc9-ab7be8befd1c"
@@ -1692,7 +1692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "id": "a1c465bc-2275-44d5-a0a7-625a18d8b666",
       "metadata": {
         "id": "a1c465bc-2275-44d5-a0a7-625a18d8b666",
@@ -1872,7 +1872,7 @@
         "id": "wvPrWgBCWp76"
       },
       "id": "wvPrWgBCWp76",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1891,7 +1891,7 @@
         "outputId": "357b5a60-49a3-42d3-b7ab-710e44eafff7"
       },
       "id": "8Bs2aTix3CyP",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,7 +1924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "84b862c2-0db4-4829-93e1-2f3e2d2c39f8",
       "metadata": {
         "id": "84b862c2-0db4-4829-93e1-2f3e2d2c39f8"
@@ -1943,7 +1943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "id": "e596519a-a287-4d52-8e04-4f703a5ddc5a",
       "metadata": {
         "id": "e596519a-a287-4d52-8e04-4f703a5ddc5a"
@@ -1967,7 +1967,7 @@
         "outputId": "da003769-19f8-4a6c-f7ce-bdf5df60deb5"
       },
       "id": "LUtgfyKC8t5D",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2025,7 +2025,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "D9oC9RIDhXVi"
       },
@@ -2042,8 +2042,7 @@
         "    return None\n",
         "\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ],
       "id": "D9oC9RIDhXVi"
     },
@@ -2061,7 +2060,7 @@
         }
       },
       "id": "r74gtvt8ka2x",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2217,7 +2216,7 @@
         "outputId": "82a637a6-8015-4dfd-cfef-76f335ee9757"
       },
       "id": "kY_1pRys017M",
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3849,7 +3848,7 @@
         "outputId": "eabf850e-bef7-44ca-a59b-b4a122383e3a"
       },
       "id": "VbgZwJQKFDoS",
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3997,7 +3996,7 @@
         "outputId": "1b6bd875-aa53-4bc2-c127-2f27775e22c2",
         "id": "NZwBQ4Wqog52"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4099,7 +4098,7 @@
         }
       },
       "id": "fUYAD4Bft9eW",
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4374,7 +4373,7 @@
         }
       },
       "id": "9X6jcUplumQY",
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4650,7 +4649,7 @@
         }
       },
       "id": "2Sj9oG63wshk",
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4706,7 +4705,7 @@
         }
       },
       "id": "7aL-2w7fxPmV",
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4746,7 +4745,7 @@
         }
       },
       "id": "DbtR7DOLxtgm",
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5002,7 +5001,7 @@
         }
       },
       "id": "fCpYwKEkyi0Q",
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5041,7 +5040,7 @@
         }
       },
       "id": "BH3BnEo8zURe",
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5082,7 +5081,7 @@
         }
       },
       "id": "h7VEpjdzzhPg",
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5586,6 +5585,16 @@
       "source": [
         "**Question 22** [3 pts]: Donner la liste des pairs de quasi-identifiants pour lesquels `adult_df` satisfait le 2-anonymat."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Le **k-anonymat** est un critère de confidentialité qui stipule que pour chaque combinaison de valeurs des quasi-identifiants, il doit y avoir au moins k enregistrements dans le jeu de données. Dans ce cas, k = 2"
+      ],
+      "metadata": {
+        "id": "TlCKhOXEr5bq"
+      },
+      "id": "TlCKhOXEr5bq"
     },
     {
       "cell_type": "code",
