--- a/labo_1_01_g.ipynb
+++ b/labo_1_01_g.ipynb
@@ -5549,11 +5549,26 @@
         "list_2_anonymat"
       ],
       "metadata": {
-        "id": "H-C4yZKQ--9N"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H-C4yZKQ--9N",
+        "outputId": "c33dee0f-67fb-4b8a-ab94-8098884f1021"
       },
       "id": "H-C4yZKQ--9N",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 67,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
